# filebrowser-client

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  README.md  docker-compose.yml  pyproject.toml  setup.py
filebrowser_client/: __init__.py  client.py  main.py
