[tool.poetry]
name = "filebrowser-client"
version = "0.1.0rc1"
description = "A simple CLI client for filebrowser"
authors = ["Mohamed Cherkaoui <chermed@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "filebrowser_client"}]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}

[tool.poetry.scripts]
filebrowser-client = "filebrowser_client:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
isort = "^5.10.1"
black = "^22.10.0"
pylint = "^2.15.5"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
